[gd_scene load_steps=5 format=2]

[ext_resource path="res://protoilu/Character.gd" type="Script" id=1]
[ext_resource path="res://unsortedassets/atlast_holdman.tres" type="Texture" id=2]
[ext_resource path="res://unsortedassets/pointer.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Character" type="Area2D"]
script = ExtResource( 1 )

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateLabel" type="Label" parent="."]
anchor_right = 0.1
margin_left = -15.0
margin_top = -30.0
margin_right = 22.0
margin_bottom = -16.0
text = "STATE"
align = 1

[node name="CharacterSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CurrentHeading" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0627451, 1 )
texture = ExtResource( 3 )
offset = Vector2( 20, 0 )

[node name="DesiredHeading" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 3 )
offset = Vector2( 20, 0 )
